--- a/app/components/header.html
+++ b/app/components/header.html
@@ -10,5 +10,34 @@
 <body>
 <div class="wrapper">
     <header class="header">
-        HEADER
+        <div class="header__container _container">
+            <div class="header__inner">
+                <nav class="menu">
+                    <ul class="menu__list">
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#">About</a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#">Gallery</a>
+                        </li>
+                    </ul>
+                </nav>
+                <a class="logo" href="#">
+                    <img src="images/src/logo.png" alt="logo">
+                </a>
+                <nav class="menu">
+                    <ul class="menu__list">
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#">Blog</a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+                <button class="header__btn">
+                    <img src="images/src/icon_menu.svg" alt="icon menu">
+                </button>
+            </div>
+        </div>
     </header>
