--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,3 +1,10 @@
+body {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 27px;
+}
+
 .wrapper {
     display: flex;
     flex-direction: column;
