--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,4 +1,4 @@
-:root {
-    --color-White: #fff;
-    --color-Black: #000;
+%title-font {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
 }
