--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -61,6 +61,7 @@
     }
 
     &__info-text {
+        max-width: 476px;
         margin: 0 0 16px 0;
     }
 
@@ -70,6 +71,7 @@
         font-weight: 600;
         color: $title;
         margin: 0 0 22px 0;
+        padding: 0 0 0 30px;
     }
 
     &__copyright {
