--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -74,14 +74,18 @@
         padding: 0 0 0 30px;
     }
 
+    &__form {
+        display: flex;
+    }
+
     &__form-input {
         padding: 6px 10px 6px 18px;
         border: 1px solid rgba(56, 54, 54, 0.7);
         border-radius: 21px;
         background-color: transparent;
-        width: 368px;
         font-size: 16px;
         line-height: 28px;
+        width: 100%;
 
         &::placeholder {
             color: #a1a1a1;
@@ -95,8 +99,10 @@
         color: #fffff0;
         padding: 6px 12px;
         background-color: $title;
+        border: 1px solid $title;
         border-radius: 21px;
         min-width: 160px;
+        margin: 0 0 0 9px;
     }
 
     &__copyright {
